# mcf8316c-rs

./: Cargo.toml  README.md
examples/: mcp2221.rs
src/: lib.rs
src/mcf8316c/: device.rs  i2c.rs  mod.rs
src/mcf8316c/registers/algorithm_configuration/: closed_loop1.rs  closed_loop2.rs  closed_loop3.rs  closed_loop4.rs  isd_config.rs  kval.rs  motor_startup1.rs  motor_startup2.rs  ref_profiles1.rs  ref_profiles2.rs  ref_profiles3.rs  ref_profiles4.rs  ref_profiles5.rs  ref_profiles6.rs  rev_drive_config.rs
src/mcf8316c/registers/common/: enums.rs  mod.rs  percent_as_u8.rs
src/mcf8316c/registers/hardware_configuration/: device_config1.rs  device_config2.rs  gd_config1.rs  gd_config2.rs  mod.rs  peri_config1.rs
src/mcf8316c/registers/internal_algorithm_configuration/: int_algo2.rs
src/protocol/: control_word.rs  device.rs  mod.rs
src/registers/: addresses.rs  any_register.rs  mod.rs  register.rs
src/registers/algorithm_configuration/: closed_loop1.rs  closed_loop2.rs  closed_loop3.rs  closed_loop4.rs  isd_config.rs  kval.rs  mod.rs  motor_startup1.rs  motor_startup2.rs  ref_profiles1.rs  ref_profiles2.rs  ref_profiles3.rs  ref_profiles4.rs  ref_profiles5.rs  ref_profiles6.rs  rev_drive_config.rs
src/registers/common/: enums.rs  error.rs  lock_mode.rs  mod.rs  percent_as_u8.rs
src/registers/fault_configuration/: fault_config1.rs  fault_config2.rs  mod.rs
src/registers/hardware_configuration/: device_config1.rs  device_config2.rs  gd_config1.rs  gd_config2.rs  mod.rs  peri_config1.rs  pin_config.rs
src/registers/internal_algorithm_configuration/: int_algo1.rs  int_algo2.rs  mod.rs
